tests/baselines/reference/asyncGenerators.objectLiteralMethod.20.es2017.errors.txt
tests/cases/conformance/asyncGenerators/es2017/objectLiteralMethods/asyncGenerators.objectLiteralMethod.20.es2017.ts(3,16): error TS2304: Cannot find name 'yield'.


==== tests/cases/conformance/asyncGenerators/es2017/objectLiteralMethods/asyncGenerators.objectLiteralMethod.20.es2017.ts (1 errors) ====
    const x = {
        async * f() {
            var x: yield;
                   ~~~~~
!!! error TS2304: Cannot find name 'yield'.
        }
    }